# rules_swift_explicit_module_import_issue

./: .bazelrc  .gitignore  BUILD.bazel  Bottom.swift  FoundationOverlay.swift  Leaf.swift  MODULE.bazel  Mid.swift  MixedFoundationConsumer.swift  Proxy.swift  README.md  Repro.swift
GoogleSignIn/: BUILD
MixedFoundationRuntime/: MixedFoundationRuntime.m
MixedFoundationRuntime/include/: MixedFoundationRuntime.h
Rx/: BUILD
RxSwift/: BUILD
Scripts/: build-rx-xcframeworks.sh
