http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(
    name = "rules_apple",
    version = "4.5.3",
    repo_name = "build_bazel_rules_apple"
)

git_override(
    module_name = "rules_apple",
    remote = "https://github.com/bazelbuild/rules_apple.git",
    commit = "a73e06786571c29ebf74e736dde6ad8f57bac312"
)

bazel_dep(
    name = "rules_swift",
    version = "3.6.1",
    repo_name = "build_bazel_rules_swift"
)

git_override(
    module_name = "rules_swift",
    remote = "https://github.com/erneestoc/rules_swift.git",
    commit = "d797b36ed31c9d5704731435b0b0e3606ee57a16"
)

bazel_dep(
    name = "apple_support",
    version = "2.5.4",
    repo_name = "build_bazel_apple_support"
)

bazel_dep(name = "rules_cc", version = "0.2.15")

http_archive(
    name = "google_sign_in",
    urls = [
        "https://dl.google.com/dl/firebase/ios/carthage/12.2.0/GoogleSignIn-31b2e32d1dadbaa8.zip"
    ],
    build_file = "//GoogleSignIn:BUILD"
)

http_archive(
    name = "RxSwift",
    urls = [
        "https://github.com/ReactiveX/RxSwift/archive/refs/tags/6.10.2.zip"
    ],
    build_file = "//RxSwift:BUILD",
    strip_prefix = "RxSwift-6.10.2"
)

system_sdk = use_extension("@build_bazel_rules_swift//swift:extensions.bzl", "system_sdk")
system_sdk.configure_sdks(names = ["iPhoneOS", "iPhoneSimulator"])
use_repo(system_sdk, "system_sdk")
